--- a/templates/notes.html
+++ b/templates/notes.html
@@ -17,7 +17,7 @@
         <hr class="intro-divider">
         {% if notes %}
           <div class="center">
-            <table class="table table-striped table-bordered">
+            <table class="table table-striped table-bordered" style="table-layout: fixed;">
               <thead>
                 <tr>
                   <th width="5%"> # </th>
@@ -30,7 +30,7 @@
               {% for note in notes %}
                     <tr>
                       <td> {{notes.index(note) + 1}} </td>
-                      <td> {{note.note}} </td>
+                      <td style="white-space: pre-line; word-wrap: break-word"> {{note.note}} </td>
                       <td>
                         <a href="{{ url_for('edit_note', note_id=note.id) }}">
                           <i class="fa fa-pencil"></i> Edit
