--- a/templates/index.html
+++ b/templates/index.html
@@ -9,6 +9,8 @@
                     <h1>Note Keeper</h1>
                     <h3>Welcome! Enjoy Noting</h3>
                     <hr class="intro-divider">
+                    <img src="https://storage.googleapis.com/static-images-notekeeper/notes-images.jpg"
+                         alt="Notes Image" align="middle" width="400px" height="auto"/>
                 </div>
             </div>
         </div>
