--- a/templates/base.html
+++ b/templates/base.html
@@ -5,6 +5,7 @@
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet">
     <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
     <link href="{{ url_for('static', filename='css/style.css') }}" rel="stylesheet">
+    <link rel="shortcut icon" href="https://storage.googleapis.com/static-images-notekeeper/logo.png">
 </head>
 <body>
     <nav class="navbar navbar-default navbar-fixed-top topnav" role="navigation">
@@ -16,6 +17,8 @@
                   <span class="icon-bar"></span>
                   <span class="icon-bar"></span>
               </button>
+              <a class="navbar-brand topnav" href="{{ url_for('index') }}"> <img src="https://storage.googleapis.com/static-images-notekeeper/logo.png"
+                                                                                 alt="Note Keeper Logo"/></a>
               <a class="navbar-brand topnav" href="{{ url_for('index') }}">Note keeper</a>
           </div>
           <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
