--- a/templates/notes.html
+++ b/templates/notes.html
@@ -1,4 +1,5 @@
 {% import "bootstrap/utils.html" as utils %}
+{% import "bootstrap/wtf.html" as wtf %}
 {% extends "base.html" %}
 {% block title %}Notes{% endblock %}
 {% block body %}
@@ -20,8 +21,8 @@
             <table class="table table-striped table-bordered" style="table-layout: fixed;">
               <thead>
                 <tr>
-                  <th width="5%"> # </th>
-                  <th width="75%"> Note </th>
+                  <th width="10%"> Date / Time </th>
+                  <th width="70%"> Note </th>
                   <th width="10%"> Edit </th>
                   <th width="10%"> Delete </th>
                 </tr>
@@ -29,7 +30,7 @@
               <tbody>
               {% for note in notes %}
                     <tr>
-                      <td> {{notes.index(note) + 1}} </td>
+                      <td> {{note.time_created}} </td>
                       <td style="white-space: pre-line; word-wrap: break-word"> {{note.note}} </td>
                       <td>
                         <a href="{{ url_for('edit_note', note_id=note.id) }}">
@@ -51,6 +52,13 @@
             <h3> No notes has been added yet. </h3>
           </div>
         {% endif %}
+
+        <hr class="intro-divider">
+        <br>
+        <div class="center" style="text-align: center; width:400px; height:auto;">
+          <h3 style="text-align:center;">Get Older Notes</h3>
+          {{ wtf.quick_form(form) }}
+        </div>
         </div>
       </div>
     </div>
